feat: 升级学生模块数据异步调用

--- a/oes-core/src/main/resources/templates/include/css.html
+++ b/oes-core/src/main/resources/templates/include/css.html
@@ -2,7 +2,7 @@
 <!-- Bootstrap 3.3.6 -->
 <link rel="stylesheet" href="/webjars/bootstrap/4.4.1-1/css/bootstrap-grid.css"/>
 <!-- Font Awesome -->
-<link rel="stylesheet" href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<link rel="stylesheet" href="/webjars/font-awesome/5.12.0/css/all.css"/>
 <!-- Theme style -->
 <link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/dist/css/adminlte.min.css"/>
 <!-- scroller -->
@@ -16,6 +16,8 @@
 <link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/toastr/toastr.min.css">
 <!-- jq-confirm -->
 <link rel="stylesheet" href="/static/plugins/jquery-confirm/jquery-confirm.min.css">
+<!-- bootstrap table -->
+<link rel="stylesheet" href="/webjars/bootstrap-table/1.16.0/dist/bootstrap-table.min.css">
 <style>
     body {
         font-family: 'Microsoft Yahei', Arial, Helvetica, sans-serif;
