--- a/oes-core/src/main/resources/templates/include/js.html
+++ b/oes-core/src/main/resources/templates/include/js.html
@@ -2,8 +2,6 @@
 <script src="/webjars/AdminLTE/3.0.0/plugins/jquery/jquery.min.js"></script>
 <!-- Select 2 -->
 <script src="/webjars/AdminLTE/3.0.0/plugins/select2/js/select2.min.js"></script>
-<!-- Bootstrap 3.3.6 -->
-<script src="/webjars/bootstrap/4.4.1-1/js/bootstrap.bundle.min.js"></script>
 <!-- SlimScroll -->
 <script src="/webjars/AdminLTE/3.0.0/plugins/overlayScrollbars/js/OverlayScrollbars.min.js"></script>
 <!-- FastClick -->
@@ -14,9 +12,14 @@
 <script src="/webjars/AdminLTE/3.0.0/dist/js/demo.js"></script>
 <!-- moment -->
 <script src="/webjars/AdminLTE/3.0.0/plugins/moment/moment-with-locales.min.js"></script>
-<!-- layer -->
-<script src="/static/plugins/layer/layer.js"></script>
 <!-- Toastr -->
 <script src="/webjars/AdminLTE/3.0.0/plugins/toastr/toastr.min.js"></script>
 <!-- jq-confirm -->
 <script src="/static/plugins/jquery-confirm/jquery-confirm.min.js"></script>
+<!-- proper -->
+<script src="/webjars/AdminLTE/3.0.0/plugins/popper/umd/popper.min.js"></script>
+<!-- Bootstrap 3.3.6 -->
+<script src="/webjars/bootstrap/4.4.1-1/js/bootstrap.min.js"></script>
+<!-- bootstrap-table -->
+<script src="/webjars/bootstrap-table/1.16.0/dist/bootstrap-table.min.js"></script>
+<script src="/webjars/bootstrap-table/1.16.0/dist/locale/bootstrap-table-zh-CN.min.js"></script>
