--- a/oes-core/src/main/resources/templates/teacher/course/save-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/course/save-modal.html
@@ -12,7 +12,7 @@
                     <input type="hidden" name="teacherId" value="${session.teacher.id}">
                     <div class="table">
                         <label for="courseName"></label>
-                        <input type="text" placeholder="请输入课程名称" class="form-control" name="courseName"
+                        <input type="text" placeholder="请输入课程名称（长度不能超过20个字）" class="form-control" name="courseName"
                                id="courseName">
                     </div>
                 </form>
