--- a/oes-core/src/main/resources/templates/teacher/major/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/major/update-modal.html
@@ -31,7 +31,7 @@
             </div>
             <div class="modal-footer justify-content-end">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="updateBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="updateMajor()">确定</button>
             </div>
         </div>
     </div>
