--- a/oes-core/src/main/resources/templates/student/include/header.html
+++ b/oes-core/src/main/resources/templates/student/include/header.html
@@ -13,7 +13,7 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" href="#">
-                <i class="fa fa-gear"></i>
+                <i class="fas fa-tools"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
                     <!-- Message Start -->
