--- a/oes-core/src/main/resources/templates/student/self/update-pass.html
+++ b/oes-core/src/main/resources/templates/student/self/update-pass.html
@@ -80,20 +80,15 @@
                             <form role="form" id="change">
                                 <div class="card-body">
                                     <div class="form-group">
-                                        <label for="oldPassword">旧密码</label>
+                                        <label for="oldPassword">原密码</label>
                                         <input type="hidden" name="id" value="${session.studentId}">
                                         <input type="password" name="oldPassword" class="form-control" id="oldPassword"
-                                               placeholder="旧密码">
+                                               placeholder="原密码" autocomplete="off">
                                     </div>
                                     <div class="form-group">
                                         <label for="password">新密码</label>
                                         <input type="password" name="password" class="form-control" id="password"
-                                               placeholder="新密码">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="ps2">请再输入一遍密码</label>
-                                        <input type="password" name="ps2" class="form-control" id="ps2"
-                                               placeholder="请再输入一遍密码">
+                                               placeholder="新密码" autocomplete="off">
                                     </div>
                                 </div>
                                 <!-- /.card-body -->
