--- a/oes-core/src/main/resources/templates/teacher/major/save-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/major/save-modal.html
@@ -3,21 +3,21 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">新增专业</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">新增专业</h4>
             </div>
             <div class="modal-body">
                 <form id="save-form">
-                    <div class="form-group form_datetime">
+                    <div class="form-group">
                         <label>所属学院</label>
-                        <select name="academyId"  style="width: 100%" class="academySelect">
-                            <option value="">请选择</option>
+                        <select name="academyId" id="academyId" style="width: 100%" class="academySelect">
+                            <option>请选择</option>
                             <!-- 数据填充 -->
                         </select>
                     </div>
-                    <div class="form-group form_datetime">
+                    <div class="form-group">
                         <label>专业名称</label>
                         <input type="text" name="major" class="form-control">
                     </div>
@@ -25,7 +25,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="saveBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="saveMajor()">确定</button>
             </div>
         </div>
     </div>
